client/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

body{ 
    font-family: "Montserrat", sans-serif;
}

.ant-modal-body {
  scrollbar-width: thin;
}

.ant-modal-body::-webkit-scrollbar {
  width: 6px;
}
.ant-modal-body::-webkit-scrollbar-thumb {
  background-color: #d1d5db;
  border-radius: 6px;
}

